Spacing between sections fixed

--- a/css/style.css
+++ b/css/style.css
@@ -138,18 +138,6 @@ body:after {
   box-shadow: none !important;
 }
 
-.site-section {
-  padding: 2.5em 0;
-}
-@media (min-width: 768px) {
-  .site-section {
-    padding: 5em 0;
-  }
-}
-.site-section.site-section-sm {
-  padding: 4em 0;
-}
-
 .site-section-heading {
   padding-bottom: 20px;
   margin-bottom: 0px;
@@ -2736,19 +2724,65 @@ figure figcaption {
 .btn-primary:active {
   background-color: black !important;
 }
-.containerRow {
-  margin-top: 5vh;
-}
 .saberMainButton:hover {
   color: black !important;
 }
 .map {
   margin: auto;
   width: 90%;
+  padding-top: 3vh;
 }
 .partner {
   color: inherit;
 }
 .partner:hover {
   color: #dc3b21;
+}
+
+.mb-3,
+.my-3 {
+  margin-bottom: 0 !important;
+}
+
+.mb-5,
+.my-5 {
+  margin-bottom: 0 !important;
+}
+
+.site-section {
+  padding-bottom: 5vh !important;
+  padding-top: 5vh !important;
+}
+.section-title {
+  padding-bottom: 3vh !important;
+  padding-top: 3vh !important;
+}
+
+@media only screen and (max-width: 992px) {
+  .switch-container {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    box-orient: vertical;
+  }
+  .switch1 {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    box-ordinal-group: 1;
+  }
+  .switch2 {
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    box-ordinal-group: 2;
+  }
+  .site-section {
+    padding-bottom: 3vh !important;
+    padding-top: 3vh !important;
+  }
+  .section-title {
+    padding-bottom: 3vh !important;
+    padding-top: 3vh !important;
+  }
 }
